fixed bug where right arrow and spinner would overlap on second loading.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -452,8 +452,12 @@ p.left-aligned {
 
 .spinner-suggestions {
     float: right;
-    margin-top: -40px;
+    margin-top: -39px;
     margin-right: 15px;
+}
+
+.spinner-suggestions.extra-padding-right {
+    margin-right: 37px;
 }
 
 .scroll-height-one {
